--- a/infra/compose-prod/docker-compose.yaml
+++ b/infra/compose-prod/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.8"
 
 services:
   website:
+    platform: linux/arm64
     image: public.ecr.aws/d3a6d4r1/cam/reserve:website-latest
     container_name: reserve-website-1
     ports:
@@ -12,7 +13,7 @@ services:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8081/"]
       interval: 30s
       timeout: 10s
       retries: 3
