--- a/mobile/rupu/pubspec.yaml
+++ b/mobile/rupu/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-  
+
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.7.2
   dio: ^5.8.0+1
   flutter_secure_storage: ^9.2.4
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
