--- a/front/website/nginx.conf
+++ b/front/website/nginx.conf
@@ -3,28 +3,11 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    # Define el archivo índice por defecto.
     index index.html;
 
+    # Manejar rutas de Astro normalmente
     location / {
-        # 1. Intenta servir el archivo tal cual ($uri).
-        # 2. Intenta servir el archivo con .html al final ($uri.html).
-        # 3. Intenta servir el directorio con index.html ($uri/).
-        # 4. Si todo falla, sirve el /index.html principal (que redirige a /inicio).
         try_files $uri $uri.html $uri/ /index.html;
-    }
-
-    # Reverse Proxy para las llamadas a la API
-    # Todas las peticiones que empiecen con /v1/ se redirigen al backend.
-    location /v1/ {
-        # El nombre 'central_reserve' es el nombre del servicio en docker-compose
-        proxy_pass http://central_reserve:3050/api/v1/;
-        
-        # Cabeceras importantes para el proxy
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Cache para archivos estáticos
@@ -32,4 +15,4 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
-} 
+}
