--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -9,15 +9,14 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    # Puedes agregar aquí directivas http globales si las necesitas
-
-    # Bloque server original
+    # Bloque server HTTP - redirige a HTTPS
     server {
         listen 80;
         server_name ${DOMAIN};
         return 301 https://$host$request_uri;
     }
 
+    # Bloque server HTTPS principal
     server {
         listen 443 ssl;
         server_name ${DOMAIN};
@@ -28,25 +27,54 @@ http {
         # Evitar que nginx busque archivos estáticos por defecto
         root /dev/null;
 
-        # Website (landing, etc.)
-        location /trattoria/ {
+        # Website Trattoria (Astro) - proxy al contenedor website
+       location /trattoria/ {
+            # Quitar el prefijo /trattoria/ antes de enviar al contenedor
+            rewrite ^/trattoria/(.*)$ /$1 break;
+            proxy_pass http://website:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # No reescribir Location en respuestas
+            proxy_redirect off;
+        }
+
+        # Assets de Astro (CSS, JS, imágenes) - también pueden venir con /trattoria/
+        location ~ ^/trattoria/(_astro|images)/ {
+            rewrite ^/trattoria/(.*)$ /$1 break;
             proxy_pass http://website:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Ruta de prueba para verificar que el backend responde
-        location = /ping {
-            proxy_pass http://central_reserve:3050/ping;
+        # Assets de Astro directos (sin prefijo /trattoria/)
+        location ~ ^/(_astro|images|favicon\.svg)/ {
+            proxy_pass http://website:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # API routes (debe ir antes que la ruta general /)
+        # Favicon y otros archivos estáticos raíz
+        location ~ ^/(favicon\.svg|favicon\.ico)$ {
+            proxy_pass http://website:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Redirigir rutas sin prefijo a /trattoria/ (para enlaces rotos)
+        location ~ ^/(inicio|contacto|reservas)/?$ {
+            return 301 /trattoria$request_uri;
+        }
+
+        # API Backend - proxy al contenedor central_reserve
         location /api/ {
             proxy_pass http://central_reserve:3050/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
 
             # CORS headers
             add_header 'Access-Control-Allow-Origin' '*' always;
@@ -64,37 +92,22 @@ http {
             }
         }
 
-
-
-        # Swagger documentation (debe ir antes que la ruta general /)
+        # Swagger documentation
         location ~ ^/docs(/.*)?$ {
-            # Log para debug
-            access_log /var/log/nginx/docs_access.log;
-            error_log /var/log/nginx/docs_error.log;
-            
-            # Proxy para Swagger UI y sus archivos estáticos
             proxy_pass http://central_reserve:3050;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Headers adicionales para archivos estáticos
-            proxy_set_header Accept-Encoding gzip;
-            proxy_buffering off;
-            proxy_cache off;
-            
-            # Timeouts más largos para debug
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
 
-        # Frontend SPA (ruta general - debe ir al final)
-        location / {
+        # Frontend React App - solo para /app/
+        location /app/ {
             proxy_pass http://frontend:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Archivos estáticos del frontend
@@ -108,6 +121,11 @@ http {
             proxy_pass http://frontend:80/manifest.json;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+        }
+        
+        # Ruta por defecto - 404 para rutas no encontradas
+        location / {
+            return 404;
         }
     }
 }
