--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -110,26 +110,21 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Flow Print Calculator - Next.js SPA
-        # Assets estáticos de Next.js
+                       # Flow Print Calculator - Next.js con basePath
+        # Redireccionar /flow-print a /flow-print/ para consistencia
+        location = /flow-print {
+            return 301 /flow-print/;
+        }
+
+        # Assets estáticos de Next.js 
         location /flow-print/_next/ {
             proxy_pass http://calculate-flow-print:3000/_next/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_cache_valid 200 1d;
-            add_header Cache-Control "public, max-age=86400";
+            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
-        # Assets estáticos adicionales (imágenes, favicon, etc.)
-        location ~ ^/flow-print/(favicon\.ico|.*\.(png|jpg|jpeg|gif|svg|css|js|webp))$ {
-            rewrite ^/flow-print/(.*)$ /$1 break;
-            proxy_pass http://calculate-flow-print:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            add_header Cache-Control "public, max-age=3600";
-        }
-
-        # Todas las demás rutas de flow-print - SPA (una sola página)
+        # Aplicación principal
         location /flow-print/ {
             proxy_pass http://calculate-flow-print:3000/;
             proxy_set_header Host $host;
@@ -137,21 +132,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Server $host;
-            
-            # Para SPA - siempre servir la página principal para rutas no encontradas
-            proxy_intercept_errors on;
-            error_page 404 = @flow_print_fallback;
         }
 
-        # Fallback para SPA routing
-        location @flow_print_fallback {
-            proxy_pass http://calculate-flow-print:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
 
         # Archivos estáticos del frontend
         location /static/ {
