--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -116,17 +116,18 @@ http {
             return 301 /flow-print/;
         }
 
-        # Assets estáticos de Next.js 
-        location /flow-print/_next/ {
-            proxy_pass http://calculate-flow-print:3000/_next/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            add_header Cache-Control "public, max-age=31536000, immutable";
+        # Flow Print Calculator - Next.js SIN basePath (configuración simple)
+        # Redireccionar /flow-print a /flow-print/
+        location = /flow-print {
+            return 301 /flow-print/;
         }
-
-        # Aplicación principal
+        
+        # Todas las rutas de flow-print
         location /flow-print/ {
-            proxy_pass http://calculate-flow-print:3000/;
+            # Quitar el prefijo /flow-print/ antes de enviar al contenedor
+            rewrite ^/flow-print/(.*)$ /$1 break;
+            
+            proxy_pass http://calculate-flow-print:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
