📚 migrando front a next js

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -110,23 +110,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-                       # Flow Print Calculator - Next.js con basePath
-        # Redireccionar /flow-print a /flow-print/ para consistencia
+      # Redirigir /flow-print sin barra a /flow-print/
         location = /flow-print {
             return 301 /flow-print/;
         }
 
-        # Flow Print Calculator - Next.js SIN basePath (configuración simple)
-        # Redireccionar /flow-print a /flow-print/
-        location = /flow-print {
-            return 301 /flow-print/;
-        }
-        
-        # Todas las rutas de flow-print
+        # Proxy para todo lo que empieza con /flow-print/
         location /flow-print/ {
-            # Quitar el prefijo /flow-print/ antes de enviar al contenedor
-            rewrite ^/flow-print/(.*)$ /$1 break;
-            
             proxy_pass http://calculate-flow-print:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
