feat: accept business logo as file

--- a/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
+++ b/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
@@ -1168,10 +1168,10 @@ paths:
         in: formData
         name: description
         type: string
-      - description: URL del logo
+      - description: Logo del negocio
         in: formData
         name: logo_url
-        type: string
+        type: file
       - description: Color primario
         in: formData
         name: primary_color
@@ -1335,10 +1335,10 @@ paths:
         in: formData
         name: description
         type: string
-      - description: URL del logo
+      - description: Logo del negocio
         in: formData
         name: logo_url
-        type: string
+        type: file
       - description: Color primario
         in: formData
         name: primary_color
