--- a/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
+++ b/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
@@ -697,6 +697,75 @@ definitions:
       success:
         type: boolean
     type: object
+  internal_infra_primary_http2_handlers_reservehandler_response.ReserveDetail:
+    properties:
+      reserva_id:
+        type: integer
+      start_at:
+        type: string
+      end_at:
+        type: string
+      number_of_guests:
+        type: integer
+      reserva_creada:
+        type: string
+      reserva_actualizada:
+        type: string
+      estado_id:
+        type: integer
+      estado_codigo:
+        type: string
+      estado_nombre:
+        type: string
+      cliente_id:
+        type: integer
+      cliente_nombre:
+        type: string
+      cliente_email:
+        type: string
+      cliente_telefono:
+        type: string
+      cliente_dni:
+        type: string
+      mesa_id:
+        type: integer
+      mesa_numero:
+        type: integer
+      mesa_capacidad:
+        type: integer
+      negocio_id:
+        type: integer
+      negocio_nombre:
+        type: string
+      negocio_codigo:
+        type: string
+      negocio_direccion:
+        type: string
+      usuario_id:
+        type: integer
+      usuario_nombre:
+        type: string
+      usuario_email:
+        type: string
+    type: object
+  response.ReserveSuccessResponse:
+    properties:
+      data:
+        $ref: '#/definitions/internal_infra_primary_http2_handlers_reservehandler_response.ReserveDetail'
+      success:
+        type: boolean
+    type: object
+  response.ReserveListSuccessResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/internal_infra_primary_http2_handlers_reservehandler_response.ReserveDetail'
+        type: array
+      success:
+        type: boolean
+      total:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -1897,8 +1966,7 @@ paths:
         "200":
           description: Lista de reservas obtenida exitosamente
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/response.ReserveListSuccessResponse'
         "400":
           description: Parámetros inválidos
           schema:
@@ -1937,8 +2005,7 @@ paths:
         "201":
           description: Reserva creada exitosamente
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/response.ReserveSuccessResponse'
         "400":
           description: Solicitud inválida
           schema:
@@ -1977,8 +2044,7 @@ paths:
         "200":
           description: Reserva obtenida exitosamente
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/response.ReserveSuccessResponse'
         "400":
           description: ID inválido
           schema:
