feat: add reservation status listing

--- a/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
+++ b/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
@@ -766,6 +766,24 @@ definitions:
       total:
         type: integer
     type: object
+  response.ReservationStatus:
+    properties:
+      id:
+        type: integer
+      code:
+        type: string
+      name:
+        type: string
+    type: object
+  response.ReservationStatusListSuccessResponse:
+    properties:
+      success:
+        type: boolean
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/response.ReservationStatus'
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -2167,6 +2185,26 @@ paths:
       security:
       - BearerAuth: []
       summary: Cancela una reserva
+      tags:
+      - Reservas
+  /reserves/status:
+    get:
+      description: Obtiene los estados de las reservas
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Estados de reserva obtenidos correctamente
+          schema:
+            $ref: '#/definitions/response.ReservationStatusListSuccessResponse'
+        "500":
+          description: Error interno del servidor
+          schema:
+            type: object
+            additionalProperties: true
+      security:
+      - BearerAuth: []
+      summary: Lista los estados de reserva
       tags:
       - Reservas
   /roles:
