corrigiendo validacion email

--- a/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
+++ b/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
@@ -28,9 +28,15 @@ definitions:
         type: string
       name:
         type: string
+      navbar_image_url:
+        type: string
       primary_color:
         type: string
+      quaternary_color:
+        type: string
       secondary_color:
+        type: string
+      tertiary_color:
         type: string
       timezone:
         type: string
@@ -80,9 +86,15 @@ definitions:
         type: string
       name:
         type: string
+      navbar_image_url:
+        type: string
       primary_color:
         type: string
+      quaternary_color:
+        type: string
       secondary_color:
+        type: string
+      tertiary_color:
         type: string
       timezone:
         type: string
@@ -325,6 +337,8 @@ definitions:
         type: integer
       start_at:
         type: string
+      status_id:
+        type: integer
       table_id:
         type: integer
     type: object
@@ -360,6 +374,68 @@ definitions:
         type: integer
       number:
         type: integer
+    type: object
+  response.BusinessDetailResponse:
+    properties:
+      address:
+        type: string
+      business_type:
+        $ref: '#/definitions/response.BusinessTypeDetailResponse'
+      code:
+        type: string
+      created_at:
+        type: string
+      custom_domain:
+        type: string
+      description:
+        type: string
+      enable_delivery:
+        type: boolean
+      enable_pickup:
+        type: boolean
+      enable_reservations:
+        type: boolean
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      logo_url:
+        type: string
+      name:
+        type: string
+      navbar_image_url:
+        type: string
+      primary_color:
+        type: string
+      quaternary_color:
+        type: string
+      secondary_color:
+        type: string
+      tertiary_color:
+        type: string
+      timezone:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  response.BusinessTypeDetailResponse:
+    properties:
+      code:
+        type: string
+      created_at:
+        type: string
+      description:
+        type: string
+      icon:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      name:
+        type: string
+      updated_at:
+        type: string
     type: object
   response.BusinessTypeInfo:
     properties:
@@ -413,6 +489,15 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/response.GenerateAPIKeyResponse'
+      success:
+        type: boolean
+    type: object
+  response.GetBusinessByIDResponse:
+    properties:
+      data:
+        $ref: '#/definitions/response.BusinessDetailResponse'
+      message:
+        type: string
       success:
         type: boolean
     type: object
@@ -531,6 +616,99 @@ definitions:
         $ref: '#/definitions/response.PermissionResponse'
       success:
         example: true
+        type: boolean
+    type: object
+  response.ReservationStatus:
+    properties:
+      code:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  response.ReservationStatusListSuccessResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/response.ReservationStatus'
+        type: array
+      success:
+        type: boolean
+    type: object
+  response.ReserveDetail:
+    properties:
+      cliente_dni:
+        type: string
+      cliente_email:
+        type: string
+      cliente_id:
+        description: Cliente
+        type: integer
+      cliente_nombre:
+        type: string
+      cliente_telefono:
+        type: string
+      end_at:
+        type: string
+      estado_codigo:
+        type: string
+      estado_id:
+        description: Estado
+        type: integer
+      estado_nombre:
+        type: string
+      mesa_capacidad:
+        type: integer
+      mesa_id:
+        description: Mesa
+        type: integer
+      mesa_numero:
+        type: integer
+      negocio_codigo:
+        type: string
+      negocio_direccion:
+        type: string
+      negocio_id:
+        description: Negocio (cambiado de Restaurante)
+        type: integer
+      negocio_nombre:
+        type: string
+      number_of_guests:
+        type: integer
+      reserva_actualizada:
+        type: string
+      reserva_creada:
+        type: string
+      reserva_id:
+        description: Reserva
+        type: integer
+      start_at:
+        type: string
+      usuario_email:
+        type: string
+      usuario_id:
+        description: Usuario
+        type: integer
+      usuario_nombre:
+        type: string
+    type: object
+  response.ReserveListSuccessResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/response.ReserveDetail'
+        type: array
+      success:
+        type: boolean
+      total:
+        type: integer
+    type: object
+  response.ReserveSuccessResponse:
+    properties:
+      data:
+        $ref: '#/definitions/response.ReserveDetail'
+      success:
         type: boolean
     type: object
   response.ResourcePermissions:
@@ -696,93 +874,6 @@ definitions:
         $ref: '#/definitions/response.UserResponse'
       success:
         type: boolean
-    type: object
-  internal_infra_primary_http2_handlers_reservehandler_response.ReserveDetail:
-    properties:
-      reserva_id:
-        type: integer
-      start_at:
-        type: string
-      end_at:
-        type: string
-      number_of_guests:
-        type: integer
-      reserva_creada:
-        type: string
-      reserva_actualizada:
-        type: string
-      estado_id:
-        type: integer
-      estado_codigo:
-        type: string
-      estado_nombre:
-        type: string
-      cliente_id:
-        type: integer
-      cliente_nombre:
-        type: string
-      cliente_email:
-        type: string
-      cliente_telefono:
-        type: string
-      cliente_dni:
-        type: string
-      mesa_id:
-        type: integer
-      mesa_numero:
-        type: integer
-      mesa_capacidad:
-        type: integer
-      negocio_id:
-        type: integer
-      negocio_nombre:
-        type: string
-      negocio_codigo:
-        type: string
-      negocio_direccion:
-        type: string
-      usuario_id:
-        type: integer
-      usuario_nombre:
-        type: string
-      usuario_email:
-        type: string
-    type: object
-  response.ReserveSuccessResponse:
-    properties:
-      data:
-        $ref: '#/definitions/internal_infra_primary_http2_handlers_reservehandler_response.ReserveDetail'
-      success:
-        type: boolean
-    type: object
-  response.ReserveListSuccessResponse:
-    properties:
-      data:
-        items:
-          $ref: '#/definitions/internal_infra_primary_http2_handlers_reservehandler_response.ReserveDetail'
-        type: array
-      success:
-        type: boolean
-      total:
-        type: integer
-    type: object
-  response.ReservationStatus:
-    properties:
-      id:
-        type: integer
-      code:
-        type: string
-      name:
-        type: string
-    type: object
-  response.ReservationStatusListSuccessResponse:
-    properties:
-      success:
-        type: boolean
-      data:
-        type: array
-        items:
-          $ref: '#/definitions/response.ReservationStatus'
     type: object
 host: localhost:8080
 info:
@@ -1363,11 +1454,10 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
+        "200":
           description: Negocio obtenido exitosamente
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/response.GetBusinessByIDResponse'
         "400":
           description: Solicitud inválida
           schema:
@@ -2189,7 +2279,7 @@ paths:
       - Reservas
   /reserves/status:
     get:
-      description: Obtiene los estados de las reservas
+      description: Obtiene todos los estados de reserva disponibles
       produces:
       - application/json
       responses:
@@ -2200,8 +2290,8 @@ paths:
         "500":
           description: Error interno del servidor
           schema:
-            type: object
             additionalProperties: true
+            type: object
       security:
       - BearerAuth: []
       summary: Lista los estados de reserva
