modificando compose para flow print

--- a/infra/compose-prod/docker-compose.yaml
+++ b/infra/compose-prod/docker-compose.yaml
@@ -209,6 +209,8 @@ services:
   calculate-flow-print:
     image: public.ecr.aws/d3a6d4r1/cam/reserve:dtf-calculator
     container_name: alculate_flow_print_prod
+    env_file:
+      - .env.flow
     ports:
       - "3000:3000"
     environment:
