--- a/mobile/rupu/pubspec.yaml
+++ b/mobile/rupu/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   syncfusion_localizations: ^30.2.4
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.9.0
+  file_picker: ^8.0.0
+  image: ^4.1.7
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
