--- a/mobile/rupu/ios/Runner/Info.plist
+++ b/mobile/rupu/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Necesitamos la cámara para tomar la foto de perfil.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Necesitamos la galería para seleccionar la foto de perfil.</string>
 </dict>
 </plist>
