--- a/mobile/rupu/pubspec.yaml
+++ b/mobile/rupu/pubspec.yaml
@@ -48,8 +48,12 @@ dependencies:
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.9.0
   file_picker: ^8.0.0
-  image: ^4.1.7
   path_provider: ^2.1.4
+  mime: ^1.0.4
+  http_parser: ^4.0.2
+  path: ^1.9.0
+  image: ^4.2.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
